// Vitest Snapshot v1

exports[`<Counter /> > it renders 1`] = `
<div>
  <button
    data-testid="counter"
  >
    Counter 
    <!--#-->
    0
    <!--/-->
  </button>
</div>
`;

exports[`<Counter /> > renders 1 1`] = `
<div>
  <button>
    Counter 
    <!--#-->
    0
    <!--/-->
  </button>
</div>
`;

exports[`Counter > should render 1`] = `
<div>
  <button
    data-testid="counter"
  >
    Counter 
    <!--#-->
    0
    <!--/-->
  </button>
</div>
`;
